tests/rustdoc-ui/doc-cfg-3.stderr
error: `any()` was used when other values were provided
  --> $DIR/doc-cfg-3.rs:6:40
   |
LL | #![doc(auto_cfg(hide(target_os, values(any(), "linux"))))]
   |                                        ^^^^^  ------- value declared here
   |
note: the lint level is defined here
  --> $DIR/doc-cfg-3.rs:3:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: `any()` was used when other values were provided
  --> $DIR/doc-cfg-3.rs:7:49
   |
LL | #![doc(auto_cfg(hide(target_os, values("linux", any()))))]
   |                                        -------  ^^^^^
   |                                        |
   |                                        value declared here

error: aborting due to 2 previous errors

